--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+certifi==2021.5.30
+charset-normalizer==2.0.6
+idna==3.2
+pyasn1==0.4.8
 PyBluez==0.23
+requests==2.26.0
+rsa==4.7.2
+urllib3==1.26.6
