--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ mypy-extensions==0.4.3
 pyasn1==0.4.8
 PyBluez==0.23
 requests==2.26.0
+RPi.GPIO==0.7.0
 rsa==4.7.2
 typing-extensions==3.10.0.2
 typing-inspect==0.7.1
 urllib3==1.26.6
+uuid==1.30
